<?xml version="1.0" encoding="utf-8"?>
<!--
    Name: Joseph Varilla
    Date: 6/10/2019
    Final Project
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"  android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/i_lent_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/field_headers"/>

        <LinearLayout
            android:id="@+id/loaned_loan_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/i_owe_label"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/field_headers"/>

        <LinearLayout
            android:id="@+id/owed_loan_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/paid_label"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/field_headers"/>

        <LinearLayout
            android:id="@+id/paid_loan_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

    </LinearLayout>
</ScrollView>